@@ -230,7 +230,7 @@ if('i' == method)
 
   double c;
   apply(CARDINALITY, reachable, c);
-  operation::showAllComputeTables(meddlyout, 3);
+  ct_entry_type::showAllComputeTables(meddlyout, 3);
 
   printf("Approx. %g reachable states\n", c);
 
